--- a/frontend/src/components/Navbar2.css
+++ b/frontend/src/components/Navbar2.css
@@ -13,10 +13,7 @@
 .navbar-logo {
   margin-right: 18%;
   width: 38vh;
-  filter: drop-shadow(
-    -4px -4px 50px #ffffff60,
-    0px 4px 4px rgba(0, 0, 0, 0.25)
-  );
+  filter: drop-shadow(-4px -4px 50px #ffffff60);
 }
 
 .profile-pic {
