--- a/frontend/src/styles/Presentateur.css
+++ b/frontend/src/styles/Presentateur.css
@@ -1,9 +1,3 @@
-#presenterContainer {
-  position: absolute;
-  bottom: -100px;
-  right: 15%;
-}
-
 #presenter {
   height: 700px;
   filter: drop-shadow(10px 2px 4px #00000030);
@@ -13,9 +7,23 @@
   cursor: pointer;
 }
 
-#speech {
+.presContainer {
   position: absolute;
-  right: 60%;
+}
+
+#accueilPresPosition,
+#resultsPresPosition {
+  bottom: -100px;
+  right: 15%;
+}
+
+#quizPresPosition {
+  bottom: -100px;
+  left: 0%;
+}
+
+.presSpeech {
+  position: absolute;
   background-color: #fafafa;
   border-radius: 20px;
   padding: 10px;
@@ -24,21 +32,40 @@
   font-weight: 600;
 }
 
-#speech::after {
+.presSpeech::after {
   content: "";
   display: flex;
   position: absolute;
-  top: 100%;
-  right: 30px;
   height: 20px;
   width: 20px;
   background-color: #fafafa;
   clip-path: polygon(20% 0, 100% 100%, 0 100%);
+}
+
+#accueilSpeechPosition,
+#resultsSpeechPosition {
+  right: 60%;
+}
+
+#quizSpeechPosition {
+  left: 100%;
+}
+
+#accueilSpeechPosition::after,
+#resultsSpeechPosition::after {
+  top: 100%;
+  right: 30px;
   rotate: 180deg;
 }
 
-#speech,
-#speech::after {
+#quizSpeechPosition::after {
+  top: 100%;
+  left: 30px;
+  rotate: 90deg;
+}
+
+.presSpeech,
+.presSpeech::after {
   animation: scale-in-center 3s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite
     both;
 }
@@ -58,7 +85,7 @@
 }
 
 @media screen and (min-width: 2048px) {
-  #presenterContainer {
+  #accueilPresContainer {
     right: 20%;
   }
 }
