--- a/frontend/src/components/GitPage.css
+++ b/frontend/src/components/GitPage.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background: url("./theme-game-5.png");
   background-size: cover;
 }
@@ -36,4 +36,4 @@ body {
 
 .listItem a:hover {
   text-decoration: underline;
-}
+} */
