--- a/frontend/src/components/Navbar2.css
+++ b/frontend/src/components/Navbar2.css
@@ -1,9 +1,8 @@
-.app-nav {
+/* .app-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
+} */
 .right-section {
   display: flex;
   align-items: center;
