files reorganised : all css files moved to folder styles; all images moved to folder assets; page Accueil now named Home; imports are changed regarding these updates

--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,6 +1,6 @@
 footer {
   position: fixed;
-  bottom: 0;
+  bottom: 40px;
   width: 98%;
   padding: 10px;
   display: flex;
@@ -20,6 +20,7 @@ footer {
 
 footer p {
   margin-right: 10px;
+  color: white;
 }
 
 footer img {
