--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
   -moz-osx-font-smoothing: grayscale;
   line-height: 2;
   font-weight: 400;
-  background-image: url("../src/assets/background-theatre-509302860\ 1.png");
+  /* background-image: url("../src/assets/background-theatre-509302860\ 1.png"); */
   background-size: cover;
   background-repeat: no-repeat;
   font-synthesis: none;
