resolved the backgroundMusic with the page home.jsx/css and added a new more stylish button

--- a/frontend/src/components/BackgroundMusic.css
+++ b/frontend/src/components/BackgroundMusic.css
@@ -1,6 +1,10 @@
 .btnMusic {
-  padding: 10px 20px;
-  background-color: #007bff;
+  margin-top: 0.5rem;
+  margin-left: 35rem;
+  margin-right: 1rem;
+  width: 60px;
+  /* padding: 10px 20px; */
+  /* background-color: #007bff; */
   color: white;
   border: none;
   border-radius: 5px;
@@ -10,9 +14,9 @@
 }
 
 .btnMusic:hover {
-  background-color: #0056b3;
+  background-color: #d5346a;
 }
 
-.btnMusic:active {
+/* .btnMusic:active {
   background-color: #00408b;
-}
+} */
