--- a/frontend/src/styles/Navbar1.css
+++ b/frontend/src/styles/Navbar1.css
@@ -22,7 +22,7 @@
   justify-content: end;
   align-items: center;
   gap: 20px;
-  margin-right: 25%;
+  /* margin-right: 40%; */
   background-image: none;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .navbar-image {
-  margin-left: 58%;
+  /* margin-left: %; */
   width: 40vh;
   filter: drop-shadow(-4px -4px 50px #ffffff90);
   background-image: none;
