--- a/frontend/src/styles/Modal.css
+++ b/frontend/src/styles/Modal.css
@@ -15,6 +15,7 @@
   cursor: pointer;
   font-weight: bold;
   font-size: 16px;
+  background-color: aquamarine;
 }
 
 .button-add-changment.visible {
