--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -8,7 +8,7 @@
   line-height: 2;
   font-weight: 400;
   background-image: url("../src/assets/background-theatre-509302860\ 1.png");
-  background-size: cover;
+  background-size: 100vw 100vh;
   background-repeat: no-repeat;
   font-synthesis: none;
   font-family: sans-serif;
