quiz page v1.1 improuved

--- a/frontend/src/styles/QuizDisplay.css
+++ b/frontend/src/styles/QuizDisplay.css
@@ -102,7 +102,7 @@ span {
   border-bottom-width: 3px;
   transform: translateY(3px);
 }
-.buttonHomePage a {
+.linkHomePage {
   text-decoration: none;
   background-color: #aae6e6;
 }
