--- a/frontend/src/styles/Quiz.css
+++ b/frontend/src/styles/Quiz.css
@@ -14,6 +14,7 @@
   #quizPresPosition {
     left: -5%;
   }
+}
 .quizQuestions {
   height: 80vh;
   margin: auto;
@@ -52,3 +53,118 @@
   font-size: 1.3rem;
   font-weight: 600;
 } */
+
+.quizDisplay {
+  position: absolute;
+  width: 50%;
+  height: 40%;
+  top: 40%;
+  left: 33%;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+#questionDisplay {
+  width: 100%;
+  height: 35%;
+  padding: 10px;
+  background-color: #fafafa;
+  border-radius: 20px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#questionDisplay p {
+  text-align: center;
+}
+#quizOptions {
+  width: 100%;
+  height: 60%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 60px;
+  grid-row-gap: 24px;
+}
+
+.option {
+  border-radius: 20px;
+  border: none;
+  background-color: #fafafa;
+  filter: drop-shadow(0px 10px 4px rgba(28, 25, 25, 0.82));
+  transition: 0.3s;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.option0:hover,
+.option1:hover,
+.option2:hover,
+.option3:hover {
+  transform: scale(1.02);
+}
+
+.correctOption {
+  background-color: #29942d;
+  color: #fafafa;
+}
+.wrongOption {
+  background-color: #e31a26;
+  color: #fafafa;
+}
+
+span {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+.finalScore {
+  margin: 18% 0 0 30%;
+  width: 70%;
+  height: 50%;
+}
+.messageScore {
+  width: 50%;
+  background-color: #fafafa;
+  padding: 10px;
+  border-radius: 20px;
+  margin-bottom: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.buttonHomePage {
+  margin-left: 70%;
+  background-color: #aae6e6;
+  color: #fefefe;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  width: 15rem;
+  height: 5rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  border: white;
+  border-bottom: 4px solid #18baba;
+  transition: 0.3s;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.buttonHomePage:hover {
+  box-shadow: 0 0 rgba(0, 0, 0, 0.4);
+  border-bottom-width: 3px;
+  transform: translateY(3px);
+}
+.linkHomePage {
+  text-decoration: none;
+  background-color: #aae6e6;
+}
+@media screen and (min-width: 2048px) {
+  .quizDisplay {
+    top: 40%;
+    left: 37%;
+  }
+}
