Button Start Quiz created; BackgroundMusic.css moved to folder styles and css file; QuizDisplay modified to show count down during the quiz; style of VisualMinuteur component modified; page Quiz style modified : mainly display of carousel and position of button Home in function of the screen size

--- a/frontend/src/styles/VisuelMinuteur.css
+++ b/frontend/src/styles/VisuelMinuteur.css
@@ -15,3 +15,8 @@
   font-size: 20px;
   color: green;
 }
+.containerMinuteur {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
