--- a/frontend/src/styles/ButtonStartQuiz.css
+++ b/frontend/src/styles/ButtonStartQuiz.css
@@ -1,25 +1,27 @@
-#buttonNext {
-  position: absolute;
-  top: 75%;
-  left: 105%;
-}
-#buttonNextQuestion {
-  background-color: #aae6e6;
+#buttonStartQuiz {
+  background-color: #d5346a;
   color: #fefefe;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   width: 15rem;
-  height: 5rem;
-  font-size: 1.3rem;
+  height: 4rem;
+  font-size: 1.6rem;
   font-weight: 600;
   border: white;
-  border-bottom: 4px solid #18baba;
+  border-bottom: 4px solid #902448;
   transition: 0.3s;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
-#buttonNextQuestion:hover {
+#buttonStartQuiz:hover {
   box-shadow: 0 0 rgba(0, 0, 0, 0.4);
   border-bottom-width: 2px;
   transform: translateY(3px);
+}
+@media screen and (min-width: 1800px) {
+  #buttonStartQuiz {
+    width: 20rem;
+    height: 5rem;
+    font-size: 2rem;
+  }
 }
