--- a/frontend/src/styles/QuizCreation.css
+++ b/frontend/src/styles/QuizCreation.css
@@ -16,7 +16,7 @@
 }
 
 h1,
-H2,
+h2,
 h3,
 h4 {
   color: rgb(0, 6, 9);
@@ -30,20 +30,21 @@ input {
   font-size: 14px;
 }
 
-button {
-  background-color: #992be2;
-  /* width: 80px; */
+/* commented as impact display of button Home  */
+/* button {
+   background-color: #992be2; 
+   width: 80px; 
   color: white;
   padding: 8px 16px;
   border: none;
   font-size: 14px;
   cursor: pointer;
   margin-bottom: 10px;
-}
+} */
 
-button:hover {
+/* button:hover {
   background-color: #e8408c;
-}
+} */
 
 #response {
   color: #f5f5f5;
