--- a/frontend/src/styles/Quiz.css
+++ b/frontend/src/styles/Quiz.css
@@ -1,58 +1,16 @@
 #quizPresPosition {
   left: 7%;
 }
-#quizSpeechPosition {
+
+/* #quizSpeechPosition {
   display: none;
-}
+} */
 
 @media screen and (min-width: 2048px) {
   #quizPresPosition {
     left: 15%;
   }
 }
-/* @media screen and (max-width: 1600px) {
-  #quizPresPosition {
-    left: -5%;
-  }
-}
-.quizQuestions {
-  height: 80vh;
-  margin: auto;
-}
-
-#questionDisplay {
-  position: absolute;
-  top: 35%;
-  left: 20%;
-  margin-left: 150px;
-  background-color: #fafafa;
-  border-radius: 20px;
-  padding: 10px;
-  width: 50%;
-  font-size: 1.3rem;
-  font-weight: 600;
-}
-
-#choiceContainer {
-  position: absolute;
-  top: 55%;
-  left: 20%;
-  width: 50%;
-  display: grid;
-  margin-left: 200px;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-}
-
-.choice {
-  background-color: #fafafa;
-  border-radius: 20px;
-  padding: 10px;
-  width: 200px;
-  font-size: 1.3rem;
-  font-weight: 600;
-} */
 
 .quizDisplay {
   position: absolute;
@@ -63,6 +21,7 @@
   font-size: 1.3rem;
   font-weight: 600;
 }
+
 #questionDisplay {
   width: 100%;
   height: 35%;
@@ -74,9 +33,11 @@
   justify-content: center;
   align-items: center;
 }
+
 #questionDisplay p {
   text-align: center;
 }
+
 #quizOptions {
   width: 100%;
   height: 60%;
@@ -97,6 +58,7 @@
   font-weight: 600;
   color: black;
 }
+
 .option0:hover,
 .option1:hover,
 .option2:hover,
@@ -109,15 +71,18 @@
   background-color: #29942d;
   color: #fafafa;
 }
+
 .wrongOption {
   background-color: #e31a26;
   color: #fafafa;
 }
+
 .finalScore {
   margin: 18% 0 0 30%;
   width: 70%;
   height: 50%;
 }
+
 .messageScore {
   width: 50%;
   background-color: #fafafa;
@@ -130,6 +95,7 @@
   font-size: 1.3rem;
   font-weight: 600;
 }
+
 .buttonHomePage {
   margin-left: 70%;
   background-color: #aae6e6;
@@ -148,15 +114,18 @@
   justify-content: center;
   align-items: center;
 }
+
 .buttonHomePage:hover {
   box-shadow: 0 0 rgba(0, 0, 0, 0.4);
   border-bottom-width: 3px;
   transform: translateY(3px);
 }
+
 .linkHomePage {
   text-decoration: none;
   background-color: #aae6e6;
 }
+
 .container {
   box-shadow: 0 0 0 0 !important;
   position: absolute;
@@ -166,6 +135,7 @@
   height: 10%;
   width: 30%;
 }
+
 @media screen and (min-width: 2048px) {
   .quizDisplay {
     top: 40%;
