--- a/frontend/src/styles/Navbar2.css
+++ b/frontend/src/styles/Navbar2.css
@@ -19,6 +19,19 @@
   height: 5vh;
   width: auto;
   border-radius: 50%;
-  margin-right: 4em;
+  /* margin-right: 4em; */
   border: 1px solid white;
+}
+.profileContainer {
+  margin-right: 4em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.profileContainer span {
+  color: #fff;
+  font-weight: 900;
+  font-size: 1.3rem;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
