--- a/frontend/src/styles/QuizDisplay.css
+++ b/frontend/src/styles/QuizDisplay.css
@@ -7,11 +7,12 @@
   font-size: 1.3rem;
   font-weight: 600;
 }
+
 #questionDisplay {
   width: 100%;
   height: 35%;
   padding: 10px;
-  background-color: #fafafa;
+  background-color: transparent;
   border-radius: 20px;
   margin-bottom: 100px;
   display: flex;
@@ -19,9 +20,12 @@
   justify-content: center;
   align-items: center;
 }
+
 #questionDisplay p {
   text-align: center;
+  color: transparent;
 }
+
 #quizOptions {
   width: 100%;
   height: 60%;
@@ -44,6 +48,7 @@
   color: black;
   cursor: pointer;
 }
+
 .option0:hover,
 .option1:hover,
 .option2:hover,
@@ -55,10 +60,12 @@
   background-color: #29942d;
   color: #fafafa;
 }
+
 .wrongOption {
   background-color: #e31a26;
   color: #fafafa;
 }
+
 .finalScore {
   display: flex;
   flex-direction: column;
@@ -66,6 +73,7 @@
   width: 70%;
   height: 50%;
 }
+
 .messageScore {
   width: 50%;
   background-color: #fafafa;
@@ -78,13 +86,16 @@
   font-size: 1.3rem;
   font-weight: 600;
 }
+
 .congratulations {
   font-size: 5rem;
 }
+
 .linkHomePage {
   text-decoration: none;
   background-color: #aae6e6;
 }
+
 .buttonHomePage {
   margin-left: 78%;
   background-color: #aae6e6;
@@ -104,11 +115,13 @@
   align-items: center;
   cursor: pointer;
 }
+
 .buttonHomePage:hover {
   box-shadow: 0 0 rgba(0, 0, 0, 0.4);
   border-bottom-width: 3px;
   transform: translateY(3px);
 }
+
 .hideVisuelMinuteur {
   display: none;
 }
@@ -117,6 +130,7 @@
   .buttonHomePage {
     margin-left: 85%;
   }
+
   .messageScore {
     background-color: #fafafa;
     padding: 10px;
