navbar modified to display music button on page Quiz

--- a/frontend/src/styles/BackgroundMusic.css
+++ b/frontend/src/styles/BackgroundMusic.css
@@ -1,8 +1,11 @@
 .btnMusic {
-  margin-top: 0.5rem;
+  margin-top: 16px;
+  margin-right: 16px;
+  /* margin-top: 0.5rem;
   margin-left: 17rem;
-  margin-right: 1rem;
-  width: 60px;
+  margin-right: 1rem; */
+  height: 5vh;
+  width: auto;
   /* padding: 10px 20px; */
   /* background-color: #007bff; */
   color: white;
@@ -22,8 +25,8 @@
 } */
 @media screen and (min-width: 2048px) {
   .btnMusic {
-    margin-top: 0.5rem;
-    margin-left: 35rem;
+    /* margin-top: 0.5rem; */
+    /* margin-left: 35rem; */
     margin-right: 1rem;
     width: 60px;
     /* padding: 10px 20px; */
