--- a/frontend/src/styles/Navbar2.css
+++ b/frontend/src/styles/Navbar2.css
@@ -14,24 +14,30 @@
   width: 38vh;
   filter: drop-shadow(-4px -4px 50px #ffffff60);
 }
-
 .profile-pic {
+  cursor: pointer;
   height: 5vh;
   width: auto;
   border-radius: 50%;
-  /* margin-right: 4em; */
   border: 1px solid white;
 }
 .profileContainer {
-  margin-right: 4em;
+  display: flex;
+  margin-right: 2em;
+}
+.containerUserProfile {
+  margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 .profileContainer span {
   color: #fff;
   font-weight: 900;
-  font-size: 1.3rem;
+  font-size: 1rem;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.buttonMusicQuiz {
+  margin: 0;
 }
