ajout du pseudo

--- a/frontend/src/styles/Modal.css
+++ b/frontend/src/styles/Modal.css
@@ -19,9 +19,18 @@
 }
 
 .button-add-changment.visible {
-  transform: translateY(0);
+  @keyframes slide-top {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-100px);
+    }
+  }
 }
-
+.slide-top {
+  animation: slide-top 10s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
 .control {
   display: flex;
   flex-direction: row-reverse;
